// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse when given a custom parser should call it once with the snapshotted arguments 1`] = `
Array [
  Object {
    "code": "USD",
    "decimalDigits": 2,
    "decimalSeparator": ".",
    "defaultParsed": Object {
      "amount": "80.90",
      "currency": "USD",
    },
    "pattern": "%ns%s%v",
    "symbol": "$",
    "thousandsSeparator": ",",
    "value": "$80.90",
  },
]
`;

exports[`parse with "EUR" should parse "-120,99 €" given "EUR" correctly 1`] = `
Object {
  "amount": "-120.99",
  "currency": "EUR",
}
`;

exports[`parse with "EUR" should parse "1 200 145 154,42 €" given "EUR" correctly 1`] = `
Object {
  "amount": "1200145154.42",
  "currency": "EUR",
}
`;

exports[`parse with "EUR" should parse "54,42 €" given "EUR" correctly 1`] = `
Object {
  "amount": "54.42",
  "currency": "EUR",
}
`;

exports[`parse with "EUR" should parse "100,00 €" given "EUR" correctly 1`] = `
Object {
  "amount": "100.00",
  "currency": "EUR",
}
`;

exports[`parse with "GBP" should parse "-£120.99" given "GBP" correctly 1`] = `
Object {
  "amount": "-120.99",
  "currency": "GBP",
}
`;

exports[`parse with "GBP" should parse "£1,200,145,154.42" given "GBP" correctly 1`] = `
Object {
  "amount": "1200145154.42",
  "currency": "GBP",
}
`;

exports[`parse with "GBP" should parse "£54.42" given "GBP" correctly 1`] = `
Object {
  "amount": "54.42",
  "currency": "GBP",
}
`;

exports[`parse with "GBP" should parse "£100.00" given "GBP" correctly 1`] = `
Object {
  "amount": "100.00",
  "currency": "GBP",
}
`;

exports[`parse with "JPY" should parse "-¥121" given "JPY" correctly 1`] = `
Object {
  "amount": "-121",
  "currency": "JPY",
}
`;

exports[`parse with "JPY" should parse "¥1,200,145,154" given "JPY" correctly 1`] = `
Object {
  "amount": "1200145154",
  "currency": "JPY",
}
`;

exports[`parse with "JPY" should parse "¥54" given "JPY" correctly 1`] = `
Object {
  "amount": "54",
  "currency": "JPY",
}
`;

exports[`parse with "JPY" should parse "¥100" given "JPY" correctly 1`] = `
Object {
  "amount": "100",
  "currency": "JPY",
}
`;

exports[`parse with "OMR" should parse "﷼ -120.990" given "OMR" correctly 1`] = `
Object {
  "amount": "-120.990",
  "currency": "OMR",
}
`;

exports[`parse with "OMR" should parse "﷼ 1,200,145,154.420" given "OMR" correctly 1`] = `
Object {
  "amount": "1200145154.420",
  "currency": "OMR",
}
`;

exports[`parse with "OMR" should parse "﷼ 54.420" given "OMR" correctly 1`] = `
Object {
  "amount": "54.420",
  "currency": "OMR",
}
`;

exports[`parse with "OMR" should parse "﷼ 100.000" given "OMR" correctly 1`] = `
Object {
  "amount": "100.000",
  "currency": "OMR",
}
`;

exports[`parse with "USD" should parse "$1,200,145,154.42" given "USD" correctly 1`] = `
Object {
  "amount": "1200145154.42",
  "currency": "USD",
}
`;

exports[`parse with "USD" should parse "$54.42" given "USD" correctly 1`] = `
Object {
  "amount": "54.42",
  "currency": "USD",
}
`;

exports[`parse with "USD" should parse "$100.00" given "USD" correctly 1`] = `
Object {
  "amount": "100.00",
  "currency": "USD",
}
`;

exports[`parse with "USD" should parse "-$120.99" given "USD" correctly 1`] = `
Object {
  "amount": "-120.99",
  "currency": "USD",
}
`;
